# INF2102-Guia-Rapido

./: .gitignore  LICENSE  README.md  RELATORIO.md  agent.py  main.ipynb  prompt.py  pyproject.toml
